HEAD
	+ EBox::RemoteServices::Subscription::Check::check recovers for
	  any error raised on users checking
3.2.5
	+ DisasterRecoveryDomains can notify other models
	+ Remove Disaster Recovery menu entry as it is managed by
	  cloud-prof module
	+ Fix restore remote backup with spaces in the backup name
	+ Fix: Do not subscribe to the newsletter in the wizard if the
	  user requires so
3.2.4
	+ On initial setup, do only reload bundle and restart the service
	  if the server is registered
	+ Fix warning on last inside an eval on automatic-conf-backup script
3.2.3
	+ Adapted to new AJAX update of save changes button
	+ Update support information due to offer 2013
	+ Update messages in info models
	+ Show ad messages in SubscriptionInfo model
	+ Remove useless code due to offer 2013
	+ Retrieve the maximum users from Zentyal Remote
	+ Added new i18n editions
	+ Store an ad message instead of enforcing max number of users
	  in the registration check
	+ Now the module has support to store ad messages
	+ Widget recovers from latestRemoteConfBackup connection errors
	+ Fix reset URL in subscription wizard error
	+ Pinning kernels so they are updated with QA updates active
3.2.2
	+ Added missing EBox::Exceptions uses
	+ Remove cron jobs when unregistering
	+ Use latest REST Remote API to register a free account
3.2.1
	+ Missing use when restarting monitor using VPN as communication
	  layer
	+ Set proper trial link when a community account is registered
	+ Use IPS module to know the number of IDS/IPS rules
	+ Honor system-wide defined HTTP Proxy in REST client
	+ Better error message when JSON creadentials file is missing
	+ Missing EBox::Gettext use in EBox::RemoteServices::Connection
3.2
	+ Set version to 3.2
3.1.9
	+ Handle connection errors in setAdminPort
	+ Set to debug level several dev oriented notifications
3.1.8
	+ Better error if we cannot register due to lack of free space
	+ Fix links to see latest reports or its documentation on Reports tab